translations completed